--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "graphql-yoga": "^1.17.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
